# python-app-template

./: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml  release.yaml  test.yaml
